# statham-therapist

./: .gitignore  compose.yml  sonar-project.properties
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  setup.cfg
backend/app/: database.py  dependencies.py  main.py
backend/tests/: test_database.py  test_dependencies.py  test_main.py
frontend/: Dockerfile  pyproject.toml  utils.py  💬_Chat.py
frontend/pages/: 1_❤️_Favorites.py
frontend/tests/: test_1_❤️_Favorites.py  test_utils.py  test_💬_Chat.py
k6_tests/: capacity.js  perfomance.js
python/: main.py  pyproject.toml  test_main.py
selenium_tests/: compose.yml  package-lock.json  package.json  test.mjs
